[package]
name = "double_buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
tokio = { version="1.20.1", features=["sync"] }
second-stack = "0.3.5"

[dev-dependencies]
num-format = "0.4.0"
tokio = { version="1.20.1", features=["macros", "rt-multi-thread", "time"] }